--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -13,12 +13,12 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Quote placeholder</span>
+            <span id="quote"></span>
         </div>
 
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Author placeholder</span>
+            <span id="author"></span>
         </div>
 
         <!-- Button -->
@@ -29,6 +29,9 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/22dad425bc.js" crossorigin="anonymous"></script>
