--- a/Picture in Picture/index.html
+++ b/Picture in Picture/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Video -->
-    <video id="video" controls height="360" width="360"></video>
+    <video id="video" controls height="360" width="360" hidden></video>
 
     <!-- Button -->
     <div class="button-container">
